Added support for reconnection in TUI